test/fixtures/cli/module.txt

test/fixtures/cli/module.js:3:5: error: the keyword 'export' is reserved
var export;
    ^

1 error generated.
